--- a/cardinal.css
+++ b/cardinal.css
@@ -132,28 +132,12 @@ section {
     padding: 2em;
     overflow-wrap: break-word;
     border-top: 3px solid;
-}
-
-img.right {
-    float: right;
-}
-
-img.bottom {
-    margin: 0 1rem;
-    width: 64px;
-}
-
-img.zoom {
-    transition-duration: 0.5s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-out;
 }
 
-img.zoom:hover {
-    transform: scale(1.2, 1.2);
-}
-
-ul {
-    list-style-type: square;
+section:hover {
+    box-shadow: 0 1em 2.5em 0 var(--grayishBlue);
 }
 
 section.top-cyan {
@@ -167,6 +151,28 @@ section.top-blue {
 }
 section.top-orange {
     border-top-color: var(--orange);
+}
+
+img.right {
+    float: right;
+}
+
+img.bottom {
+    margin: 0 1rem;
+    width: 64px;
+}
+
+img.zoom {
+    transition-duration: 0.25s;
+    transition-timing-function: ease-out;
+}
+
+img.zoom:hover {
+    transform: scale(1.2, 1.2);
+}
+
+ul {
+    list-style-type: square;
 }
 
 h2 {
