--- a/cardinal.css
+++ b/cardinal.css
@@ -157,11 +157,6 @@ img.right {
     float: right;
 }
 
-img.bottom {
-    margin: 0 1rem;
-    width: 64px;
-}
-
 img.zoom {
     transition-duration: 0.25s;
     transition-timing-function: ease-out;
@@ -184,6 +179,17 @@ h2 {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+footer {
+    margin-top: 2rem;
+    padding: 1rem;
+    text-align: center;
+}
+
+footer img {
+    margin: 0 1rem;
+    width: 64px;
 }
 
 #modal-mask {
