--- a/cardinal.css
+++ b/cardinal.css
@@ -142,6 +142,7 @@ button:hover:enabled, button:active:enabled {
 }
 
 section {
+    background-color: var(--veryLightGray);
     border-radius: 0.5em;
     box-shadow: 0 0.5em 1.5em -0.5em var(--grayishBlue);
     padding: 2em;
@@ -217,11 +218,20 @@ footer img {
 
 #modal-dialog {
     position: absolute;
-    top: 10%;
+    top: 50%;
     left: 50%;
-    width: min(34rem, 75%);
-    background-color: var(--veryLightGray);
-    transform: translate(-50%, 0%);
+    width: 85%;
+    height: 90%;
+    transform: translate(-50%, -50%);
+}
+
+@media (min-width: 50em) {
+    #modal-dialog {
+        top: 10%;
+        width: min(34rem, 75%);
+        height: auto;
+        transform: translate(-50%, 0%);
+    }
 }
 
 #modal-close {
