--- a/cardinal.css
+++ b/cardinal.css
@@ -52,10 +52,11 @@ h2 {
     white-space: nowrap;
 }
 
-button, input {
+button, input, select, option {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
+    color: inherit;
     margin: 0.3em 0;
     border-radius: 0.3em;
     transition-duration: 0.5s;
@@ -133,6 +134,14 @@ button:disabled {
 button:hover:enabled, button:active:enabled {
     background-color: initial;
     color: var(--veryDarkBlue)
+}
+
+select {
+    margin: 0 0.5em;
+    padding: 0.1em 0.2em;
+}
+select:focus-visible {
+    outline: auto 0;
 }
 
 section {
